<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".main.StartActivities.Howtoplay">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar2"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:src="@drawable/ball"/>

    <TextView
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meczinfo1"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"/>

    <TextView
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meczinfo7"/>

    <TextView
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meczinfo2"/>
    <TextView
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meczinfo3"/>
    <TextView
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meczinfo4"/>
    <TextView
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meczinfo5"/>
    <TextView
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meczinfo6"
        android:paddingBottom="20dp"/>

    <Button
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/play"
        android:text="@string/h2p"/>


</LinearLayout>
</ScrollView>