<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.StartActivities.Next">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar1"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:src="@drawable/arrows"/>

    <TextView
        android:paddingTop="20dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_application_is_still_developing"/>

    <TextView
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/in_the_near"/>

    <TextView
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/after_euro_2020"/>

    <TextView
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stay_tuned_and_wait_until_next_football_season_start"/>

</LinearLayout>