<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.StartActivities.Credits"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar2"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:src="@drawable/info"/>

    <TextView
        android:paddingTop="20dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_application_1"/>

    <TextView
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_service_presents_the_results_of_uefa_euro_2020_matches"/>

    <TextView
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creditssss"/>

    <TextView
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cooperation"/>
    <TextView
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="bmichal900@gmail.com"/>

</LinearLayout>