<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        tools:context=".log_reg.RegistActivity">

        <ImageView
            android:id="@+id/logo1"
            android:layout_marginBottom="5dp"
            android:src="@drawable/euro2020"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/logo_aplikacji_euro_cup_2020" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/put_your_data_below_to_finish_the_registration"/>

        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="10dp"
            android:id="@+id/iName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/put_your_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890."
                android:maxLength="35"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="10dp"
            android:id="@+id/iEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/put_your_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/r_email"
                android:maxLength="35"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="10dp"
            android:id="@+id/icEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_your_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cr_email"
                android:maxLength="35"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="10dp"
            android:id="@+id/iPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/put_your_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/r_password"
                android:maxLength="40"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="10dp"
            android:id="@+id/icPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_your_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cr_password"
                android:maxLength="40"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <CheckBox
                    android:id="@+id/cb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingEnd="11dp"/>


                <TextView
                    android:id="@+id/term"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/i_accept_term_of_agreements"/>

            </LinearLayout>

        <ProgressBar
            android:id="@+id/loading1"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn2"
            android:text="@string/register"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="55dp" />

    </LinearLayout>

</ScrollView>