<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".log_reg.LostPass"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/uc"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:paddingTop="20dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sorry_but_this_option_is_still_under_construction"/>

    <TextView
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_am_currently_working_to_make_reminding_of_a_password_fully_automatical"/>

        <TextView
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/if_youw_wish_to_reset_your_password_please_send_me_an_email_only_e_mail_adresses_used_during_registration_process_will_be_accepted"/>

</LinearLayout>