<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.Options"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/iduser"
            android:text="@string/your_personal_data"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"/>

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btncopy"
            android:text="@string/copy_your_name_to_clipboard"/>

  <!--      <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchMinWidth="56dp"
                android:text="Notifications:"
                android:checked="true"
                android:textOff="OFF"
                android:textOn="ON"/>

        </LinearLayout>
        -->

        <Button
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_logout"
            android:text="@string/logout"/>

    </LinearLayout>
</LinearLayout>