<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.Mecz.MatchDetailActivity">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_below_each_flag_and_enter_predicted_score"
            android:textSize="15sp"
            android:gravity="center"
            android:padding="5dp"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_weight="0.7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/flagaDetail1"
                android:src="@drawable/bel"/>

            <ImageView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:id="@+id/vsDetail"
                android:src="@drawable/vs2"/>

            <ImageView
                android:layout_weight="0.7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/flagaDetail2"
                android:src="@drawable/aut"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_margin="10dp"
                android:layout_weight="0.7"
                android:gravity="center"
                android:hint="@string/put_score"
                android:inputType="numberSigned"
                android:digits="0123456789"
                android:maxLength="1"
                android:id="@+id/wynGosp"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text=":"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_margin="10dp"
                android:layout_weight="0.7"
                android:gravity="center"
                android:hint="@string/put_score"
                android:inputType="numberSigned"
                android:digits="0123456789"
                android:maxLength="1"
                android:id="@+id/wynGosc"/>

        </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/btn_score"
        android:text="@string/save_the_score"/>

    <ProgressBar
        android:id="@+id/loadingDetail"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>